--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-*.iml
-*.idea
-.DS_Store
-node_modules
-*.pem
-credentials.json
-.cache
-views/*.js
-views/*.js.map
-views/node
+/node_modules/
+/dist/
+/.vscode/
+.idea
